# certnode

./: .deployment-trigger  .dockerignore  .env.example  .env.production  .gitattributes  .githubworkflowsfly-deploy.yml  .gitignore  .vercel-trigger  .vercelignore  AGENTS.md  API_EXAMPLES.md  BILLING_INTEGRATION.md  BILLION_DOLLAR_BLUEPRINT.md  CAMPAIGN_TRACKER.md  CHANGELOG.md  CLAUDE_ONBOARDING_PROMPT.md  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTENT_CERTIFICATION_BUILD_PLAN.md  CONTENT_CERTIFICATION_GTM_STRATEGY.md  CONTRIBUTING.md  CUSTOMER_ONBOARDING_GUIDE.md  DEMO_SCRIPT.md  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_CACHE_FIX_GUIDE.md  Dockerfile  Dockerfile.cli  EARLY_ADOPTERS.md  FIX_DEPLOYMENT_CACHE_ISSUES.md  HOMEPAGE_UPGRADE_SUMMARY.md  IMPLEMENTATION_PLAN.md  INFRASTRUCTURE_PRICING.md  INTEGRATIONS.md  Makefile  OPTIMIZATION_PLAN.md  PHASE_2_PROGRESS.md  QUICK_STATUS.md  README.md  RECEIPT_GRAPH_QUICK_WINS.md  (+38 more)
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: a11y.yml  auto-tag-web-sdk.yml  certnode-integration.yml  certnode-verify.yml  ci-smoke.yml  ci.yml  content-certification-tests.yml  deploy-production.yml  deploy.yml  fly-deploy.yml  fly-org-inspect.yml  (+14 more)
alembic/: README
api/: Dockerfile.production  package-lock.json  package.json
assets/: certnode.css
backend/: main.py
certnode-dashboard/: .env  .env.example  README.md  jest.config.js  jest.setup.js  next.config.mjs  package-lock.json  package-pricing.json  package.json  test-receipt-graph.ts  tsconfig.json
cli/: README.md  certnode-cli.js  package.json
compliance/: control-testing-procedures.md  soc2-type-ii-framework.md
docker/: Dockerfile.cli  Dockerfile.example-api  Dockerfile.node  Dockerfile.verification-service  Dockerfile.web  README.md  docker-compose.yml  nginx.conf
docs/: API_DOCUMENTATION.md  AUDIT.md  AUDIT_CHECKLIST.md  AUDIT_PROGRESS.md  CONTENT_CERTIFICATION_PLAN.md  CONTENT_VALIDATION_ENGINE_PLAN.md  DASHBOARD_ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DISPUTE_SHIELD_TIERS.md  DOCKER.md  DUAL_INTELLIGENCE_SYSTEM_OVERVIEW.md  GITHUB_SECRETS_SETUP.md  HANDOFF_CONTENT_CERT.md  INFRA_USAGE.md  INTEGRATION_EVENT_LEDGER_PLAN.md  MASTER_IMPLEMENTATION_PLAN.md  MONITORING.md  PHASE1_IMPLEMENTATION.md  PRICING_IMPLEMENTATION_PLAN.md  PRICING_PAGE_COMPARISON.md  PRICING_STRATEGY_10-10.md  PRIVACY.md  PROGRESS_TRACKING.md  QUALITY.md  README.md  RECEIPT_GRAPH_API.md  RELEASE.md  ROTATION.md  RUNBOOK.md  SECURITY.md  SLOS.md  STRIPE_PAYMENT_LINKS_NEEDED.md  STRIPE_PRODUCT_SETUP.md  STRIPE_RENAMING_GUIDE.md  TASK_TAXONOMY.md  THREAT_MODEL.md  TRACEABILITY.md  TRI_PILLAR_INTELLIGENCE_SYSTEM_OVERVIEW.md  TRUST_BOUNDARY.md  UNIFIED_PLATFORM_PLAN.md  (+9 more)
examples/: README.md  jwks.example.json  node-sign.js  node-verify.js  receipt.example.json  web-embed.html
infra/: Dockerfile  docker-compose.yml
js/: lead-capture.js  verify.js
k8s/: deployment.yml
logging/: elasticsearch-mapping.json  winston-config.js
monitoring/: prometheus.yml
nextjs-pricing/: .dockerignore  .eslintrc.json  .gitignore  ADVANCED_FEATURES.md  ARCHITECTURE.md  ARCHITECTURE_V2.md  Dockerfile  README.md  SETUP_EMAIL.md  SETUP_GMAIL.md  docker-compose.yml  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  vercel.json
outreach/: batch-1-emails.md
postman/: CertNode-API.postman_collection.json
public/: enterprise.html  index-old.html  index.html  openapi-debug.html  openapi.html  openapi.json  platform.html  postman.collection.json  pricing.html  robots.txt  sitemap.xml  solutions.html  support.html  verify.html
sales-materials/: crypto-exchange-prospects.md  fintech-outreach-kit.md
scripts/: README.md  audit-infra.ps1  audit-roadmap.mjs  audit-tasks.js  bootstrap-layout.ps1  cloudflare-dns-setup.md  deploy-receipt-graph.bat  deploy-receipt-graph.sh  deploy-to-vercel.ps1  deploy-to-vercel.sh  generate-demo-samples.mjs  generate-test-vectors.mjs  preflight.ps1  publish-node-sdk.ps1  publish-sdks.md  publish-web-sdk.ps1  retag-node-sdk.ps1  retag-web-sdk.ps1  seed.py  smoke-infra.ps1  status-audit.mjs  stripe-add-metadata.ps1  stripe-update-all.bat  test-receipt-graph.ts  tf-apply.ps1  tf-ephemeral.ps1  validate-vectors.js  vercel-env-template.txt
sdk/python/: README.md  pyproject.toml
sdk/python/src/certnode/: __init__.py  cli.py  exceptions.py  jwks.py  utils.py  verification.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/examples/: async_server.rs  basic_verification.rs  batch_verification.rs  eddsa_verification.rs  jwks_management.rs
sdk/rust/src/: error.rs  jwks.rs  lib.rs  utils.rs
security/: hsm-integration-plan.md  security-audit.js  security-scan.yml  trivy-config.yaml
templates/: README.md  create-certnode-app.js  enterprise-css.css  enterprise-navigation.html  enterprise-page-template.html  index.html
tools/: append-pricing-title.js  benchmark.js  bootstrap_certnode.ps1  bootstrap_certnode.sh  build-web-sdk.js  check-conflicts.js  check-docs-updated.js  check-encoding.js  check-index.js  check-openapi.js  check-web-sdk-size.js  commit-lint.js  dev-generate-jwks.js  fix-pricing-pages.js  fix-public-polish.js  fix-public-pricing-title.js  fix-replacement.js  fix-site-polish.js  force-pricing-title.js  generate-sri.js  jwks-integrity-check.js  jwks-rotate-validate.js  jwks-tool.js  lint-all.sh  patch-pricing-title.js  refactor-verify.js  reorder-public-pricing-css.js  replace-home-icons.js  repo-manifest.json  size-web-sdk.js  smoke-endpoints.js  smoke-receipt.js  strip-bom.js  stripe-branding-check.js  test-fast.js  tsa-canary.js  verify-lib.js  verify-receipt.js  verify-strongest-providers.ps1
web/: account.html  compliance-calculator.html  content-intelligence.html  dashboard.html  index.html  openapi.html  openapi.json  operations-trust.html  pitch.html  platform.html  pricing.html  register.html  security.html  solutions.html  status.html  subscription-success.html  support.html  sw.js  transaction-intelligence.html  trust.html  verify.html
wordpress-plugin/: certnode.php
(+542 files in other folders)
