[package]
name = "certnode"
version = "1.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["CertNode Standards Committee <standards@certnode.io>"]
license = "MIT"
description = "Universal receipt infrastructure - Rust implementation of the CertNode open standard for tamper-evident digital receipts"
homepage = "https://certnode.io"
repository = "https://github.com/certnode/certnode"
documentation = "https://certnode.io/openapi"
readme = "README.md"
keywords = ["certnode", "receipt", "verification", "universal-standard", "infrastructure"]
categories = ["cryptography", "authentication", "web-programming"]
exclude = [
    "target/",
    "*.tmp",
    "*.swp",
    ".DS_Store"
]

[dependencies]
# Cryptography
p256 = { version = "0.13", features = ["ecdsa", "std"] }
ed25519-dalek = { version = "2.0", features = ["std"] }
sha2 = "0.10"

# JSON and Base64
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"

# HTTP client (optional, for JWKS fetching)
reqwest = { version = "0.11", features = ["json"], optional = true }
tokio = { version = "1.0", features = ["rt-multi-thread"], optional = true }

# Error handling
thiserror = "1.0"

# CLI (for binary)
clap = { version = "4.0", features = ["derive"], optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json"] }

[features]
default = []
# Enable HTTP JWKS fetching
jwks-fetch = ["reqwest", "tokio"]
# Enable CLI binary
cli = ["jwks-fetch", "clap"]

[lib]
name = "certnode"
path = "src/lib.rs"

[[bin]]
name = "certnode"
path = "src/bin/cli.rs"
required-features = ["cli"]

[[example]]
name = "basic_verification"
path = "examples/basic_verification.rs"

[[example]]
name = "eddsa_verification"
path = "examples/eddsa_verification.rs"

[[example]]
name = "jwks_management"
path = "examples/jwks_management.rs"
required-features = ["jwks-fetch"]

[[example]]
name = "batch_verification"
path = "examples/batch_verification.rs"

[[example]]
name = "async_server"
path = "examples/async_server.rs"
required-features = ["jwks-fetch"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]